# abstract-parser-public

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  TODO.md  rust-toolchain.toml  stack_opt.report
.cargo/: config.toml
.github/workflows/: bench.yml  licensed_public.yml
benches/zpl/: grammar  grammar.abs  grammar.rs  main.rs
benches/zpl_grammar/: grammar.rs  main.rs
examples/parser/: grammar.abs  main.rs
grammar/: Cargo.toml  architecture.md  peg_syntax_desctiption.md
grammar/core/: Cargo.toml
grammar/core/macros/: Cargo.toml
grammar/core/macros/src/: grammar.rs  lib.rs
grammar/core/parser/: Cargo.toml
grammar/core/parser/src/: grammar.rs  lib.rs
grammar/core/src/: lib.rs
grammar/core/tree/: Cargo.toml
grammar/core/tree/src/: lib.rs
grammar/core/tree/tests/: grammar.abs  grammar.rs
grammar/extended/: Cargo.toml
grammar/extended/macros/: Cargo.toml
grammar/extended/macros/src/: codegen.rs  grammar.rs  lib.rs
grammar/extended/parser/: Cargo.toml
grammar/extended/parser/src/: lib.rs
grammar/extended/src/: lib.rs
grammar/extended/tree/: Cargo.toml
grammar/extended/tree/parser/: Cargo.toml
grammar/extended/tree/parser/src/: lib.rs
grammar/extended/tree/src/: codegen.rs  lib.rs
grammar/extended/tree/tests/: grammar  grammar.rs
grammar/feature/: Cargo.toml
grammar/feature/parser/: Cargo.toml
grammar/feature/parser/snapshot/: Cargo.toml  lib.rs
grammar/feature/parser/src/: feature.rs  lib.rs
grammar/feature/src/: lib.rs
grammar/feature/src/parsing/: Cargo.toml
grammar/feature/src/parsing/benches/cpcl/: main.rs
grammar/feature/src/parsing/src/: lib.rs
grammar/feature/tests/: grammar.abs  grammar.rs
grammar/shared-macros/: Cargo.toml
grammar/shared-macros/src/: lib.rs  span.rs
grammar/src/: lib.rs
parser-core/: Cargo.toml
parser-core/core/: Cargo.toml
parser-core/core/benches/features/: grammar.abs  main.rs
parser-core/core/src/: lib.rs  logs.rs
parser-core/core/src/cached/: mod.rs  rules.rs
parser-core/core/src/cached/iters/: cached_rule_iter.rs  mod.rs
parser-core/core/src/input_stream/: mod.rs
parser-core/core/src/input_stream/iters/: buffer_iter.rs  cached.rs  mod.rs  smart_iter.rs
parser-core/core/src/rules/: mod.rs  utils.rs
parser-core/core/src/rules/generic_rules/: mod.rs
parser-core/core/src/rules/generic_rules/extended_rules/: mod.rs
parser-core/core/src/rules/generic_rules/repeat_rules/: mod.rs
parser-core/core/src/rules/specific_rules/: mod.rs
parser-core/examples/: text.rs
parser-core/extended-macros/: Cargo.toml
parser-core/extended-macros/examples/: example.rs
parser-core/extended-macros/src/: lib.rs
parser-core/macros/: Cargo.toml
parser-core/macros/src/: choice_rule.rs  derive_bounds.rs  lib.rs  parse_test.rs  sequence_struct.rs  token_rule.rs
parser-core/src/: lib.rs
parsers/: Cargo.toml
parsers/chars/: Cargo.toml
parsers/chars/benches/: token.rs
parsers/chars/macros/: Cargo.toml
parsers/chars/macros/src/: lib.rs
parsers/chars/src/: lib.rs
parsers/chars/src/iter/: cached.rs  mod.rs
parsers/chars/src/rules/: mod.rs  reg_expr_error.rs
parsers/src/: lib.rs
parsers/syn/: Cargo.toml
parsers/syn/src/: iter.rs  lib.rs  rules.rs
scripts/: clean_code.sh  setup.sh
scripts/bench/: criterion_json_to_md.py  run.sh
scripts/flamegraph/: run.sh
scripts/hooks/: pre-commit
scripts/license/: FILE_HEADER  repo_license.sh
scripts/profilers/: README.md  cachegrind.sh  flamegraph.sh
shared-macros/: Cargo.toml
shared-macros/src/: lib.rs  parse_structs.rs
src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  logs.rs
