# 
# abstract-parser — proprietary, source-available software (not open-source).    
# Copyright (c) 2025 Abakar Letifov
# (Летифов Абакар Замединович). All rights reserved.
# 
# Use of this Work is permitted only for viewing and internal evaluation,        
# under the terms of the LICENSE file in the repository root.
# If you do not or cannot agree to those terms, do not use this Work.
# 
# THE WORK IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
# 

[package]
edition = "2018"
license-file.workspace = true
name = "parser"
publish.workspace = true
repository.workspace = true
rust-version = "1.88"

[features]
logs = ["parser-core/logs"]

[dependencies]
parser-core.workspace = true
parser-macros.workspace = true

[dev-dependencies]
abstract-parser = {workspace = true}
