# 
# abstract-parser — proprietary, source-available software (not open-source).    
# Copyright (c) 2025 Abakar Letifov
# (Летифов Абакар Замединович). All rights reserved.
# 
# Use of this Work is permitted only for viewing and internal evaluation,        
# under the terms of the LICENSE file in the repository root.
# If you do not or cannot agree to those terms, do not use this Work.
# 
# THE WORK IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
# 

[package]
edition = "2018"
name = "utils"

[dependencies]
colored = {version = "3.0.0"}
stacker = "0.1.22"
tracing = {version = "0.1.41"}
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}

[features]
test-logs = []
