# 
# abstract-parser — proprietary, source-available software (not open-source).    
# Copyright (c) 2025 Abakar Letifov
# (Летифов Абакар Замединович). All rights reserved.
# 
# Use of this Work is permitted only for viewing and internal evaluation,        
# under the terms of the LICENSE file in the repository root.
# If you do not or cannot agree to those terms, do not use this Work.
# 
# THE WORK IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
# 

[package]
edition = "2018"
license-file.workspace = true
name = "parser-core"
publish.workspace = true
repository.workspace = true
rust-version = "1.88"

[features]
logs = ["utils/test-logs"]

[[bench]]
harness = false
name = "features"

[dependencies]
paste = "1.0.15"
rustc-hash = "1.1"
std-reset.workspace = true
utils.workspace = true

[dev-dependencies]
abstract-parser = {workspace = true, features = ["grammar"]}
criterion.workspace = true
parser-macros.workspace = true
