# 
# abstract-parser — proprietary, source-available software (not open-source).    
# Copyright (c) 2025 Abakar Letifov
# (Летифов Абакар Замединович). All rights reserved.
# 
# Use of this Work is permitted only for viewing and internal evaluation,        
# under the terms of the LICENSE file in the repository root.
# If you do not or cannot agree to those terms, do not use this Work.
# 
# THE WORK IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
# 

[package]
edition = "2018"
license-file.workspace = true
name = "chars-parser"
publish.workspace = true
repository.workspace = true

[[bench]]
harness = false
name = "token"

[dependencies]
fancy-regex = "0.16.1"
macros = {path = "macros", package = "chars-macros"}
parser.workspace = true
std-reset.workspace = true

[dev-dependencies]
abstract-parser = {workspace = true, features = ["chars"]}
criterion.workspace = true
