# 
# abstract-parser — proprietary, source-available software (not open-source).    
# Copyright (c) 2025 Abakar Letifov
# (Летифов Абакар Замединович). All rights reserved.
# 
# Use of this Work is permitted only for viewing and internal evaluation,        
# under the terms of the LICENSE file in the repository root.
# If you do not or cannot agree to those terms, do not use this Work.
# 
# THE WORK IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
# 

[package]
edition = "2024"
license-file.workspace = true
name = "grammar-extended-tree"
publish.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
grammar-core.workspace = true
grammar-extended-parser.workspace = true
grammar-extended-tree-parser.workspace = true
grammar-shared-macros.workspace = true
parser.workspace = true
parsers.workspace = true
proc-macro2.workspace = true
quote.workspace = true
std-reset.workspace = true
syn.workspace = true

[dev-dependencies]
abstract-parser = {workspace = true, features = ["grammar"]}
